login valida cuando los campos vacios

--- a/public/stylesheets/css/slicknav.css
+++ b/public/stylesheets/css/slicknav.css
@@ -14,6 +14,10 @@
   .slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
     margin-top: 0.188em; }
 
+  *{
+      box-sizing: border-box;
+  }
+
 .slicknav_menu {
   *zoom: 1; }
   .slicknav_menu .slicknav_menutxt {
