--- a/src/views/iniciarsesion.ejs
+++ b/src/views/iniciarsesion.ejs
@@ -14,32 +14,40 @@
 
     <main>
     
-    <article class="form-register2">
+      <article class="form-register2"> 
       
- 
+ <form action="" id="loginForm"  method="POST" >
         
         <a > <h4>Iniciar Sesión</h4></a>
-            <div id= "errors"></div>  <!--lo agrega pio para mostrar los errores del front validation-->
-      <form id="loginForm" action="" method="POST" > 
-        <input class="controlls2" type="email" name="email" id="email" aria-describedby="emailHelp" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="Ingrese su Correo" >
+        
+        <div id= "errors"></div>  <!--lo agrega pio para mostrar los errores del front validation-->
+        
+        
+                
+        <input class="controlls2" type="text" name="email" id="email" aria-describedby="emailHelp" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="Ingrese su Correo" >
         <small class="text-danger"><%= (typeof errors != 'undefined' && errors.email)?errors.email.msg: "" %> </small>
-        <input class="controlls2" type="password" name="password" id="password" placeholder="Ingrese su Contraseña" required>   
-        <small class="text-danger"><%= //(typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>
+        <span id="errorEmail" class="text-danger"></span>
+
+        <input class="controlls2" type="password" name="password" id="password" placeholder="Ingrese su Contraseña" >   
+        <small class="text-danger"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>
+        
 
         <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" name="recordar"><span></span>
-                    <label class="form-check-label" for="exampleCheck1" style="margin-top: 10px;">Recordarme</label>
+          <input type="checkbox" class="form-check-input" id="exampleCheck1" name="recordar">          
+          <label class="form-check-label" for="exampleCheck1" style="margin-top: 10px;">Recordarme</label>
+          <span id="errorPass" class="text-danger"></span>
         </div>
 
 
         <section class="form-register">
-            
-           <input href="/" class="botons" type="submit" value="Iniciar Sesión">
-             <p><a href="/recuperar">Olvide mi contraseñá</a></p>
+          <span id="msgError" class="text-danger"></span>
+        <button type="submit">Iniciar</button>
+
+           <p><a href="/recuperar">Olvide mi contraseñá</a></p>
         
             </form>
             
-        </article>
+          </article>
   
     </main>
 
@@ -47,6 +55,7 @@
         <%- include('./partials/footer') %>
     </footer>           
         <%- include('./partials/scripts') %>  
+       <script src='/javascript/userLogin.js'></script>
     </body>
     </html>
       
