--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -94,6 +94,7 @@
     <%- include('./partials/footer') %>
 </footer>           
     <%- include('./partials/scripts') %>  
+    <script src="/javascript/userRegister.js"></script>
    
 </body>
 </html>
