Validaciones del front en Agregar Productos

--- a/src/views/agregar.ejs
+++ b/src/views/agregar.ejs
@@ -15,16 +15,19 @@
        
     <div class="form-register2">
         <h4>Carga tu producto</h4>
-        <div id= "errors"></div>  <!--lo agrega pio para mostrar los errores del front validation-->
-          <form id="formAdd" method="POST" action="" enctype="multipart/form-data">
+        
+        <form id="formAdd" method="POST" action="" enctype="multipart/form-data"> <!-- FORMULARIO -->
           
-        <input class="controlls2" type="" name="nombre" id="nombre" placeholder="nombre" required>
+        <input class="controlls2" type="" name="nombre" id="nombre" placeholder="nombre" ><!-- NOMBRE -->
+        <span id="errorNombre" class="text-danger"></span>
 
                 
-        <input class="controlls2" type="" name="precio" id= precio placeholder="$ precio" required>      
-        
-        <label for="Categorias"></label>
-            <select name="categories" class="controlls2">
+        <input class="controlls2" type="" name="precio" id= "precio" placeholder="$ precio" >      <!-- PRECIO -->
+        <span id="errorPrecio" class="text-danger"></span>
+
+
+        <label for="Categorias" ></label>                <!-- CATEGORIAS -->
+            <select name="categories" class="controlls2" >
                 <option selected>Selecciona una Categoria</option>
                 <option value="baño">Griferia Baño</option>
                 <option value="cocina">Griferia Cocina</option>
@@ -34,17 +37,32 @@
                 <option value="accesorios">Accesorios Varios</option> 
         </select>
         <h3>Agregue 1 imagen</h3>
-        <input class="controlls2"  type="file" id="imagen" name="imagenes">
+        <input class="controlls2"  type="file" id="imagen" name="imagen">       <!-- IMAGEN -->
+        <span id="errorFoto" class="text-danger"></span>
+        </label>
+        <div class="custom-file mt-4">
+          <div class="col-12">
+              <div class="d-flex justify-content-center">
+                  <img src="" id="vistaPrevia" class="img-thumbnail">
+              </div>
+          </div>
+          </div>
 
-      </label>
+
+
+
         <label for="controlls2"></label>    
         <div class="botons">
           <label for="exampleFormControlTextarea1">Descripción</label>
-          <textarea class="form-control" id="descripcion" rows="3" name="descripcion"></textarea>
+          <textarea class="form-control" id="descripcion" rows="3" name="descripcion"></textarea> <!-- DESCRIPCION -->
+          <span id="errorComentario" class="text-danger"></span>
       </div>
                    
       <div class="mt-5 mr-5 d-flex justify-content-center">
+
+
       <button type="submit" class="btn btn-outline-primary">Publicar</button></div>
+      <span id="msgError" class="text-danger"></span>
  <p class="pull-left copyright backgroun"> <a href="/productos">Cancelar</a></li></p>
      </form>      
     
@@ -56,7 +74,7 @@
 <footer>
     <%- include('./partials/footer') %>
   </footer>           
-  
+   <script src="/javascript/productAdd.js"></script>
     <%- include('./partials/scripts') %>  
   
   </body>
