limpieza de imagenes y detalles de compaginacion

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -61,7 +61,7 @@
                                 <div class="thumb-content">
                                     <h3>Todo para tu baño</h3>
                                     <p>Queres renovar tu cuarto de baño o ya lo hiciste y no sabes que hacer con los viejos artefactos? visita la categoria y compra y vende TODO!</p>
-                                    <a href="/productos/baño">Categoria Baño</a>
+                                    <a href="/productos/todos">Chequea nuestros productos</a>
                                 </div>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                                 <div class="thumb-content">
                                     <h3>Todo Para tu cocina</h3>
                                     <p>La griferia que siempre soñaste para tu cocina con una pequeña variedad de artefactos para acompañar! Tambien si tenes algo que te sobre lo podes publicar!</p>
-                                    <a href="/productos/cocina">Categoria Cocina</a>
+                                    <a href="/productos/todos">Chequea nuestros productos</a>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                                 <div class="thumb-content">
                                     <h3>Pasando a ver?</h3>
                                     <p>Podes ver todos los productos de wasser en un solo lugar sin necesidad de pasarte una por una las categorias</p>
-                                    <a href="/productos">Todas los productos</a>
+                                    <a href="/productos/todos">Todas los productos</a>
                                 </div>
                             </div>
                         </div>
