--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -44,14 +44,9 @@
                                                     </ul>
                                                 </li>
                                                
-                                                <li><a href="/categoria">Categorias</a>
+                                                <li><a href="/categoria">Productos</a>
                                                     <ul class="submenu">
-                                                        <li><a href="/productos/baño">Griferia Baño</a></li>
-                                                        <li><a href="/productos/cocina">Griferia Cocina</a></li>
-                                                        <li><a href="/productos/bachas">Bachas</a></li>
-                                                        <li><a href="/productos/sanitarios">Sanitarios</a></li>
-                                                        <li><a href="/productos/bañeras">Bañeras y Duchas</a></li>
-                                                        <li><a href="/productos/accesorios">Accesorios varios</a></li>
+                                                        
                                                         
                                                         <% if (typeof user == "undefined") { %>
                                                             <li class="nav-item"><a href="/productos/todos" href="#">Productos</a></li>
@@ -73,10 +68,8 @@
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
-                                                            <li><a href="/producto">item 1</a></li>
-                                                            <li><a href="/producto">item 2</a></li>
-                                                            <li><a href="/producto">item 3</a></li>
-                                                            <li><a href="/carrito">IR AL CARRITO</a></li>
+                                                            <li><a href="">En construccion</a></li>
+                                                            
                                                         </ul>
                                                     </li>
                                                     <!-- Search Box -->                            
