--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -69,7 +69,7 @@
         <div class="container">    
           <div class="row">
             <div class="col-sm-12">
-              <a class="btn2 btn-primary" href="/carrito">Añadir al carrito</a>
+              <a class="btn2 btn-primary" href="/">Añadir al carrito</a>
               
             </div>
           </div>
