--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -79,7 +79,14 @@
             </div>
           </div>
           <br>
-
+          <br>
+          <div class="custom-file mt-4">
+            <div class="col-12">
+                <div class="d-flex justify-content-center">
+                    <img src="" id="vistaPrevia" class="img-thumbnail">
+                </div>
+            </div>
+            </div>
 
 
 
