actualizado el instagram

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -21,7 +21,7 @@
 
       <div class="container">
 <br>
-          <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram"></i> WASSER.ARG </a>
+          <li><a href="https://www.instagram.com/wasser.ar/"><i class="fab fa-instagram"></i> WASSER.ARG </a>
               <ul class="submenu"><br>
                 <a href="/sobreNosotros"> Sobre Nosotros </a>
                 <br>
