--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -85,7 +85,7 @@
                                                 <li><a href="/user/iniciarsesion">Bienvenido!</a></li>
                                                
                                                 <% }else{ %>
-                                                <li></li><a href="user/perfil/<%= user.id %>">Hola <%= (user)?user.nick:"!" %>   <img src="/images/avatares/<%= user.avatar %>" class="img-responsive" style="width:5%" alt="Image"> </a></li>   
+                                                <li></li><a href="/user/perfil/<%= user.id %>">Hola <%= (user)?user.nick:"!" %>   <img src="/images/avatares/<%= user.avatar %>" class="img-responsive" style="width:5%" alt="Image"> </a></li>   
                                                 
                                                 <% } %></li>  
                                                        </li>
