--- a/src/views/sobrenosotros.ejs
+++ b/src/views/sobrenosotros.ejs
@@ -46,7 +46,7 @@
                             <div class="gallery-img" style="background-image: url(stylesheets/img/integrantes/bucco.png);"></div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>LEANDRO EZEQUIEL BUCCO</h3>
+                                    <h3>LEANDRO BUCCO <br> (Ex-PowerWasser)</h3>
                                     <p>Técnico reparador de PC, Instalador y administrador de Redes. Actualmente estudiante de la Universidad Nacional de San Martin en la Tecnicatura en Programacion Informatica y tambien cursando programación web full stack Developer en Digital House.
                                     </p>
                                     
