--- a/src/views/usuarioperfil.ejs
+++ b/src/views/usuarioperfil.ejs
@@ -14,11 +14,11 @@
 <main>
     <br>
 <h1><%- nombre %>  <%- apellido %></h1>
-<h1><img src="/images/avatares/<%= avatar %>" class="img-responsive" style="width:50%" alt="Image"> </h1> 
+<h1><img src="/images/avatares/<%= avatar %>" class="img-responsive" style="width:25%" alt="Image"> </h1> 
 <br>
 
-
-    <table class="table table-responsive">
+<div class="">
+    <table class="table table-response">
         
         <thead>
             <tr>
@@ -57,7 +57,7 @@
         </tbody>
         
             </table>
-        
+        </div>
     
 
 
