--- a/src/views/usuarios.ejs
+++ b/src/views/usuarios.ejs
@@ -49,7 +49,7 @@
                 <td><form action="perfil/<%= usuario.id %>">
                     <button class="">Perfil</button>
                     </form></td>    
-                    <td><form onclick="return confirm('Estas seguro que querés eliminaro el producto?')" action="/user/delete/<%= usuario.id %>?_method=delete" method="POST">
+                    <td><form onclick="return confirm('Estas seguro que querés eliminaro el usuario?')" action="/user/delete/<%= usuario.id %>?_method=delete" method="POST">
                         <button class="">Eliminar</button>
                         </form></td>    
             </tr>
